<resources>
    <string name="app_name">The World of Hyrule App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home_item">Accueil</string>
    <string name="inventory">Inventaire</string>
    <string name="spells_item">Sorts</string>
    <string name="capacities_item">Capacités</string>
    <string name="characterNameLabel">nom personnage</string>
    <string name="raceLabel">race</string>
    <string name="rpgClassLabel">classe</string>
    <string name="levelLabel">niveau</string>
    <string name="xpLabel">expérience</string>
    <string name="hpLabel">PV</string>
    <string name="rupeesLabel">rubis</string>
    <string name="destinyForceLabel">force</string>
    <string name="destinyWisdomLabel">sagesse</string>
    <string name="destinyCourageLabel">courage</string>
    <string name="destinyPointsTitle">Points de destin</string>
    <string name="statsTitle">Statistiques</string>
    <string name="forceStatLabel">force</string>
    <string name="constitutionStatLabel">constitution</string>
    <string name="wisdomStatLabel">sagesse</string>
    <string name="charismaStatLabel">charisme</string>
    <string name="intelligenceStatLabel">intelligence</string>
    <string name="dexterityStatLabel">dextérité</string>
    <string name="saveButton">sauvegarder</string>
    <string name="capacitiesActivityTitle">Capacités</string>
    <string name="capacityFormTitle">Création de capacité</string>
    <string name="capacityNameHint">nom de la capacité</string>
    <string name="capacityRankHint">rang</string>
    <string name="capacityBonusHint">bonus</string>
    <string name="capacityHandicapHint">handicap</string>
    <string name="capacityTotalHint">total</string>
    <string name="addCapacityButton">ajouter</string>
    <string name="capacityItemRankLabel">Rang : </string>
    <string name="capacityItemBonusLabel">Bonus : </string>
    <string name="capacityItemHandicapLabel">Handicap : </string>
    <string name="capacityItemTotalLabel">Total : </string>
</resources>
