<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/banner"
                android:title="@string/home_item"/>
        <item
                android:id="@+id/nav_inventory"
                android:icon="@drawable/chest"
                android:title="@string/inventory"/>
        <item
                android:id="@+id/nav_spells"
                android:icon="@drawable/papyrus"
                android:title="@string/spells_item"/>

        <item
                android:id="@+id/nav_capacities"
                android:icon="@drawable/quiver"
                android:title="@string/capacities_item"/>
    </group>

</menu>
