<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        style="@style/labels"
                        android:labelFor="@+id/characterNameInput"
                        android:text="@string/characterNameLabel"/>

                <EditText
                        android:id="@+id/characterNameInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        style="@style/labels"
                        android:labelFor="@id/raceInput"
                        android:text="@string/raceLabel"/>

                <EditText
                        android:id="@+id/raceInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:layout_weight="1"
                />

                <TextView
                        style="@style/labels"
                        android:labelFor="@id/rpgClassInput"
                        android:text="@string/rpgClassLabel"/>

                <EditText
                        android:id="@+id/rpgClassInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:layout_weight="1"
                />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        style="@style/labels"
                        android:labelFor="@id/lvlInput"
                        android:text="@string/levelLabel"/>

                <EditText
                        android:id="@+id/lvlInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:layout_weight="2"
                />

                <TextView
                        style="@style/labels"
                        android:labelFor="@id/xpInput"
                        android:text="@string/xpLabel"/>

                <EditText
                        android:id="@+id/xpInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:layout_weight="2"
                />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        style="@style/labels"
                        android:labelFor="@id/hpInput"
                        android:text="@string/hpLabel"/>

                <EditText
                        android:id="@+id/hpInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number"/>

                <TextView
                        style="@style/labels"
                        android:text="/"/>

                <EditText
                        android:id="@+id/maxHpInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number"/>
            </LinearLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/destinyPointsTitle"
                    android:layout_marginTop="@dimen/activity_vertical_margin"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        style="@style/labels"
                        android:labelFor="@id/destinyForceInput"
                        android:text="@string/destinyForceLabel"/>

                <EditText
                        android:id="@+id/destinyForceInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:layout_weight="1"/>

                <TextView
                        style="@style/labels"
                        android:labelFor="@id/destinyWisdomInput"
                        android:text="@string/destinyWisdomLabel"/>

                <EditText
                        android:id="@+id/destinyWisdomInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:layout_weight="1"/>

                <TextView
                        style="@style/labels"
                        android:labelFor="@id/destinyCourageInput"
                        android:text="@string/destinyCourageLabel"/>

                <EditText
                        android:id="@+id/destinyCourageInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:layout_weight="1"/>
            </LinearLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/statsTitle"
                    android:layout_marginTop="@dimen/activity_vertical_margin"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        style="@style/labels"
                        android:labelFor="@id/forceStatInput"
                        android:text="@string/forceStatLabel"/>

                <EditText
                        android:id="@+id/forceStatInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:layout_weight="1"/>

                <TextView
                        style="@style/labels"
                        android:labelFor="@id/constitutionStatInput"
                        android:text="@string/constitutionStatLabel"/>

                <EditText
                        android:id="@+id/constitutionStatInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        style="@style/labels"
                        android:labelFor="@id/wisdomStatInput"
                        android:text="@string/wisdomStatLabel"/>

                <EditText
                        android:id="@+id/wisdomStatInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:layout_weight="1"/>

                <TextView
                        style="@style/labels"
                        android:labelFor="@id/charismaStatInput"
                        android:text="@string/charismaStatLabel"/>

                <EditText
                        android:id="@+id/charismaStatInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        style="@style/labels"
                        android:labelFor="@id/intelligenceStatInput"
                        android:text="@string/intelligenceStatLabel"/>

                <EditText
                        android:id="@+id/intelligenceStatInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:layout_weight="1"/>

                <TextView
                        style="@style/labels"
                        android:labelFor="@id/dexterityStatInput"
                        android:text="@string/dexterityStatLabel"/>

                <EditText
                        android:id="@+id/dexterityStatInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:layout_weight="1"/>
            </LinearLayout>

            <Button
                    android:id="@+id/saveButton"
                    android:text="@string/saveButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:onClick="saveData" android:background="@drawable/button_selector"/>

        </LinearLayout>
    </ScrollView>
    
</android.support.constraint.ConstraintLayout>